# capicxx-import-tools

./: .gitignore  README.md
conan/: README.md  build_all.sh
conan/capi-config/: commonapi.ini  conanfile.py
conan/capicxx-cmake-modules/: CMakeLists.txt  README.md  conanfile.py
conan/capicxx-cmake-modules/FindScripts/: FindCommonAPIImporter.cmake
conan/capicxx-cmake-modules/FindScripts/CommonAPIImporter_impl/: Core-gen.cmake  Core.cmake  DBus-gen.cmake  DBus.cmake  GenerateCapiCode.cmake  SomeIP-gen.cmake  SomeIP.cmake
conan/capicxx-core-runtime/: conanfile.py
conan/capicxx-generators/: CMakeLists.txt  conandata.yml  conanfile.py
conan/capicxx-generators/prebuilt/: conanfile.py
conan/capicxx-someip-runtime/: conanfile.py
conan/config/profiles/: clang  gcc  qnx71
conan/example-app/: .clang-format  .cmake-format.py  Android.bp  CMakeLists.txt  conanfile.py
conan/example-app/fidl/: example.fdepl  example.fidl
conan/example-app/src/client/: main.cpp
conan/example-app/src/service/: ExampleStubImpl.cpp  ExampleStubImpl.hpp  main.cpp
conan/vsomeip/: conandata.yml  conanfile.py
conan/workspace/: conanfile.py
soong/: Android.bp  README.md  capi_genrule.go  locations.go
